<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/sender"
        android:hint="@string/filter_by_sender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:layout_marginTop="16dp"
        android:id="@+id/subject"
        android:hint="@string/filter_by_subject"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <EditText
        android:id="@+id/message"
        android:layout_marginTop="16dp"
        android:hint="@string/filter_by_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>