<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:background="@color/icons"
    android:layout_height="match_parent"
    tools:context=".pages.login.LoginFragment">

 <LinearLayout
     android:layout_gravity="center"
     android:orientation="vertical"
     android:layout_width="220dp"
     android:layout_height="wrap_content">

     <EditText
         android:textColor="@color/primary_text"
         android:padding="8dp"
         android:background="@drawable/border"
         android:layout_margin="8dp"
         android:hint="@string/username"
         android:inputType="text"
         android:imeOptions="actionNext"
         android:id="@+id/username"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />

     <EditText
         android:textColor="@color/secondary_text"
         android:padding="8dp"
         android:background="@drawable/border"
         android:layout_margin="8dp"
         android:hint="@string/password"
         android:inputType="textPassword"
         android:id="@+id/password"
         android:imeOptions="actionDone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />

     <CheckBox
         android:layout_margin="8dp"
         android:id="@+id/rememberme"
         android:text="@string/remember_me"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />

     <Button
         android:background="@drawable/border"
         style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
         android:layout_margin="8dp"
         android:text="@string/login"
         android:id="@+id/btnlogin"
         android:drawableEnd="@drawable/ic_navigate_next_blue_800_24dp"
         android:drawableRight="@drawable/ic_navigate_next_blue_800_24dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />

 </LinearLayout>

</FrameLayout>
