<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appBg"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.dogukan.gradesforiue.pages.LoggedInActivities.inbox.MessagesFragment">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <android.support.v7.widget.CardView
            app:contentPadding="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="46dp">

                <Button
                    android:id="@+id/inbox"
                    android:layout_margin="8dp"
                    android:text="@string/inbo"
                    android:background="@drawable/border"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/outbox"
                    android:layout_margin="8dp"
                    android:text="@string/outbox"
                    android:background="@drawable/border"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/compose"
                    android:layout_margin="8dp"
                    android:text="@string/compose"
                    android:background="@drawable/border"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>


        </android.support.v7.widget.CardView>

        <HorizontalScrollView
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="@color/icons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/pages"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"></LinearLayout>

        </HorizontalScrollView>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/messagesContainer"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </LinearLayout>

        </ScrollView>


    </LinearLayout>


    <android.support.design.widget.FloatingActionButton

        android:id="@+id/fab"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:src="@drawable/ic_search_white_24dp"
        />


</FrameLayout>
